[project]
name = "ComfyUI-LinkModeToggle"
description = "Adds hotkeys and a toolbar button to toggle ComfyUI link styles (Spline, Linear, Straight)."
version = "0.1.2"
license = { text = "MIT" }
authors = [{ name = "Mike Simone", email = "mike@antonlabs.com" }]
readme = "README.md"
requires-python = ">=3.10"

[comfy]
PublisherId = "@mikesimone"
DisplayName = "ComfyUI Link Mode Toggle"
Icon = ""
Models = []
